Horizontal scroll fix

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,6 +2,7 @@
 	box-sizing: border-box;
 	font: inherit;
 	color: inherit;
+	max-width: 100%;
 }
 
 body {
